--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,4 +1,5 @@
 .characterEditor {
+  isolation: isolate;
   padding-top: 128px;
   padding-bottom: 64px;
 }
@@ -8,6 +9,7 @@
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +26,15 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 124px;
+  right: 0;
+
+  svg {
+    min-height: 500px;
+  }
 }
 
 .controlColumn {
+  width: 50%;
 }
