--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,11 @@ body {
   padding: 0;
   border: 0;
 }
+
+.perspective-wrapper {
+  background-color: hsl(195deg, 20%, 86%);
+  position: fixed;
+  bottom: 0;
+  height: 40vh;
+  width: 100%;
+}
